<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amr_roll_conveyor_adapter</name>
  <version>0.0.0</version>
  <description>An RMF door adapter for advantech box controlled roller conveyors</description>
  <maintainer email="dominik.werman@4am-robotics.com">Dominik Werman</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>rmf_dispenser_msgs</exec_depend>
  <exec_depend>rmf_ingestor_msgs</exec_depend>
  <exec_depend>amr_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
